master/force-app/main/default/objects/Form_Page__c/fields/Controlled_by_Form_Page__c.field-meta.xml
<CustomField>
    <fullName>Controlled_by_Form_Page__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Controlled by Form Page</label>
    <referenceTo>Form_Page__c</referenceTo>
    <relationshipLabel>Form Pages</relationshipLabel>
    <relationshipName>Form_Pages</relationshipName>
    <type>Lookup</type>
</CustomField>