master/force-app/main/default/objects/Form_Page__c/fields/Controlled_By_Question__c.field-meta.xml
<CustomField>
    <fullName>Controlled_By_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Controlled By Question</label>
    <referenceTo>Form_Question__c</referenceTo>
    <relationshipLabel>Form Pages</relationshipLabel>
    <relationshipName>Form_Pages</relationshipName>
    <type>Lookup</type>
</CustomField>