master/force-app/main/default/objects/Form_Page__c/fields/Parent_Page__c.field-meta.xml
<CustomField>
    <fullName>Parent_Page__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Page</label>
    <referenceTo>Form_Page__c</referenceTo>
    <relationshipLabel>Form Pages (Parent Page)</relationshipLabel>
    <relationshipName>Form_Pages1</relationshipName>
    <type>Lookup</type>
</CustomField>